fix: remove max-height of list-wrap css

--- a/src/pages/Course/Details/StudentList.scss
+++ b/src/pages/Course/Details/StudentList.scss
@@ -1,5 +1,5 @@
 .list-wrap {
-  max-height: 400px;
+  // max-height: 400px;
   overflow: auto;
   width: 90%;
   margin-top: 10px;
